# rust-plugin-system

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-crates.yml  publish-github-packages.yml  publish.yml  release.yml
crates/host-core/: Cargo.toml  README.md
crates/host-core/src/: lib.rs
crates/host-core/tests/: integration_tests.rs
crates/plugin-abi/: Cargo.toml  README.md
crates/plugin-abi/src/: lib.rs
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: lib.rs
crates/plugin-capabilities/: Cargo.toml  README.md
crates/plugin-capabilities/src/: lib.rs
crates/plugin-loader/: Cargo.toml  README.md
crates/plugin-loader/src/: lib.rs
crates/plugin-manifest/: Cargo.toml  README.md
crates/plugin-manifest/src/: lib.rs
crates/plugin-manifest/tests/: test_kit_manifest.rs
crates/plugin-protocol/: Cargo.toml  README.md
crates/plugin-protocol/src/: lib.rs
crates/plugin-protocol/tests/: test_kit_protocol.rs
crates/plugin-runtime/: Cargo.toml  README.md
crates/plugin-runtime/src/: lib.rs
crates/plugin-runtime/tests/: test_kit_runtime.rs
crates/plugin-sdk/: Cargo.toml  README.md
crates/plugin-sdk/src/: lib.rs
crates/plugin-test-kit/: Cargo.toml  README.md
crates/plugin-test-kit/src/: lib.rs
crates/plugin-wasm/: Cargo.toml  README.md
crates/plugin-wasm/src/: lib.rs
docs/advanced/: architecture-comparison.md  roadmap.md
docs/concepts/: native-json-plugin-model.md
docs/getting-started/: quickstart.md  roadmap.md
docs/guides/: contributor-guide.md  external-host-author.md  external-host-plugin.md  external-plugin-author.md  kellnr.md  publishing.md  versioning.md
docs/hosts/: host-matrix.md  rich-host-surfaces.md  surface-comparison.md
docs/overview/: index.md
docs/patterns/: capability-negotiation.md  error-handling.md  state-management.md
docs/plugins/: native-json-catalog.md
docs/publishing/: crates-io.md  github-packages.md
docs/reference/: error-model.md  lifecycle-execution.md  production-contracts.md  testing-packaging.md  trust-capabilities.md  version-compatibility.md  wasm-sandboxing.md  workspace-map.md
docs/snippets/: cli-recipes.md  gui-recipes.md  service-recipes.md
docs/tutorials/: first-runtime-plugin.md
examples/abi-evolution/: Cargo.toml  README.md
examples/abi-evolution/src/: main.rs
examples/capability-negotiation/: Cargo.toml  README.md
examples/capability-negotiation/src/: main.rs
examples/hot-reload/: Cargo.toml  README.md
examples/hot-reload/src/: main.rs
examples/minimal-loader/: Cargo.toml  README.md
examples/minimal-loader/src/: main.rs
examples/packaging/: package-release.sh
examples/packaging/abi-stable/abi-stable-greeter-bundle/: package.json  plugin-manifest.json  release.json
examples/packaging/native-json-hello-world/: bundle-layout.txt  install-local.sh  package-manifest.json  release-metadata.json
examples/packaging/native-json-hello-world/layout/plugins/hello-world/: plugin-manifest.json
examples/packaging/native-json/hello-world-bundle/: package.json  release.json
examples/packaging/native-json/service-hooks-bundle/: package.json  plugin-manifest.json  release.json
examples/packaging/wasm/wasm-sandboxed-bundle/: module.wat  package.json  release.json  wasm-plugin.json
examples/packaging/wasm/web-widget-bundle/: module.wat  package.json  release.json  wasm-plugin.json
examples/plugin-discovery/: Cargo.toml  README.md
examples/plugin-discovery/src/: main.rs
hosts/host-cli/: Cargo.toml
hosts/host-cli/src/: main.rs
hosts/host-dioxus-desktop/: Cargo.toml
hosts/host-dioxus-desktop/src/: main.rs
hosts/host-egui/: Cargo.toml
hosts/host-egui/src/: main.rs
hosts/host-iced/: Cargo.toml
hosts/host-iced/src/: main.rs
hosts/host-service/: Cargo.toml
hosts/host-service/src/: main.rs
hosts/host-tui/: Cargo.toml
hosts/host-tui/src/: main.rs
hosts/host-web/: Cargo.toml
hosts/host-web/src/: main.rs
plugins/abi-stable-command-pack/: Cargo.toml
plugins/abi-stable-command-pack/src/: lib.rs
plugins/abi-stable-greeter/: Cargo.toml
plugins/abi-stable-greeter/src/: lib.rs
plugins/command-pack/: Cargo.toml
plugins/command-pack/src/: lib.rs
plugins/config-provider/: Cargo.toml
plugins/config-provider/src/: lib.rs
plugins/data-pipeline/: Cargo.toml
plugins/data-pipeline/src/: lib.rs
plugins/filesystem-tools/: Cargo.toml
plugins/filesystem-tools/src/: lib.rs
plugins/formatter/: Cargo.toml
plugins/formatter/src/: lib.rs
plugins/hello-world/: Cargo.toml
plugins/hello-world/src/: lib.rs
plugins/logger/: Cargo.toml
plugins/logger/src/: lib.rs
plugins/metrics-observer/: Cargo.toml
plugins/metrics-observer/src/: lib.rs
plugins/service-hooks/: Cargo.toml
plugins/service-hooks/src/: lib.rs
plugins/transformer/: Cargo.toml
plugins/transformer/src/: lib.rs
plugins/tui-tools/: Cargo.toml
plugins/tui-tools/src/: lib.rs
plugins/ui-panel/: Cargo.toml
plugins/ui-panel/src/: lib.rs
plugins/wasm-sandboxed/: Cargo.toml  module.wat  wasm-plugin.json
plugins/web-widget/: Cargo.toml  module.wat  wasm-plugin.json
plugins/web-widget/src/: lib.rs
scripts/: detect-release-level.sh  publish-shared-crates.sh  upload-kellnr-docs.sh
