[workspace]
members = [
    "crates/plugin-api",
    "crates/plugin-capabilities",
    "crates/plugin-manifest",
    "crates/plugin-protocol",
    "crates/plugin-runtime",
    "crates/plugin-loader",
    "crates/plugin-sdk",
    "crates/plugin-test-kit",
    "crates/plugin-abi",
    "crates/plugin-wasm",
    "crates/host-core",
    "hosts/host-cli",
    "hosts/host-egui",
    "hosts/host-iced",
    "hosts/host-dioxus-desktop",
    "hosts/host-tui",
    "hosts/host-web",
    "hosts/host-service",
    "plugins/hello-world",
    "plugins/logger",
    "plugins/formatter",
    "plugins/transformer",
    "plugins/command-pack",
    "plugins/ui-panel",
    "plugins/filesystem-tools",
    "plugins/data-pipeline",
    "plugins/config-provider",
    "plugins/metrics-observer",
    "plugins/wasm-sandboxed",
    "plugins/abi-stable-greeter",
    "plugins/abi-stable-command-pack",
    "plugins/web-widget",
    "plugins/tui-tools",
    "plugins/service-hooks",
    "examples/minimal-loader",
    "examples/hot-reload",
    "examples/abi-evolution",
    "examples/capability-negotiation",
    "examples/plugin-discovery",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/rust-plugin-system"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"


[patch.dzwei-registry]
plugin-capabilities = { path = "crates/plugin-capabilities" }
plugin-manifest     = { path = "crates/plugin-manifest" }
plugin-protocol     = { path = "crates/plugin-protocol" }
plugin-api          = { path = "crates/plugin-api" }
plugin-sdk          = { path = "crates/plugin-sdk" }
plugin-abi          = { path = "crates/plugin-abi" }
plugin-loader       = { path = "crates/plugin-loader" }
plugin-runtime      = { path = "crates/plugin-runtime" }
plugin-wasm         = { path = "crates/plugin-wasm" }
host-core           = { path = "crates/host-core" }
plugin-test-kit     = { path = "crates/plugin-test-kit" }
