[package]
name = "host-core"
description = "Shared host orchestration for the Rust Plugin System — the Playground loader, host-fit assessment, capability negotiation, and invocation helpers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "host", "plugin-system", "runtime"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
plugin-loader = { version = "0.1.0", path = "../plugin-loader" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
plugin-runtime = { version = "0.1.0", path = "../plugin-runtime" }
semver = "1.0.27"
serde_json = "1.0.149"

[dev-dependencies]
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde_json = "1.0.149"
