[package]
name = "host-core"
version = "0.1.0"
edition = "2024"
description = "Shared host discovery, invocation, and response helpers."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
plugin-loader = { version = "0.1.0", path = "../plugin-loader" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
plugin-runtime = { version = "0.1.0", path = "../plugin-runtime" }
semver = "1.0.27"
serde_json = "1.0.149"

[dev-dependencies]
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde_json = "1.0.149"
