[package]
name = "host-core"
version = "0.1.0"
edition = "2024"
description = "Shared host discovery, invocation, and response helpers."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
plugin-loader = { version = "0.1.0", path = "../plugin-loader", registry = "dzwei-registry" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest", registry = "dzwei-registry" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol", registry = "dzwei-registry" }
plugin-runtime = { version = "0.1.0", path = "../plugin-runtime", registry = "dzwei-registry" }
semver = "1.0.27"
serde_json = "1.0.149"

[dev-dependencies]
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol", registry = "dzwei-registry" }
serde_json = "1.0.149"
