[package]
name = "plugin-abi"
description = "ABI-stable plugin loader for the Rust Plugin System — loads abi_stable-based plugins for durable cross-update binary compatibility."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "abi-stable", "plugin-system", "ffi"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
abi_stable = "0.11.3"
anyhow = "1.0.102"
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde_json = "1.0.149"
