[package]
name = "plugin-api"
description = "C FFI boundary helpers for the Rust Plugin System — symbol constants, JSON-over-FFI serialization, and C string management."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "ffi", "plugin-system", "cdylib"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde_json = "1.0.149"
