[package]
name = "plugin-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
libloading = "0.9.0"
plugin-api = { version = "0.1.0", path = "../plugin-api" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
plugin-runtime = { version = "0.1.0", path = "../plugin-runtime" }
serde_json = "1.0.149"
