[package]
name = "plugin-loader"
description = "Dynamic library loader for the Rust Plugin System — discovers and loads native JSON plugins from a directory at runtime."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "loader", "dynamic-loading", "plugin-system"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
libloading = "0.9.0"
plugin-api = { version = "0.1.0", path = "../plugin-api" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
plugin-runtime = { version = "0.1.0", path = "../plugin-runtime" }
serde_json = "1.0.149"
