[package]
name = "plugin-loader"
version = "0.1.0"
edition = "2024"
description = "Native plugin loader for JSON-over-FFI plugin libraries."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
libloading = "0.9.0"
plugin-api = { version = "0.1.0", path = "../plugin-api", registry = "dzwei-registry" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest", registry = "dzwei-registry" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol", registry = "dzwei-registry" }
plugin-runtime = { version = "0.1.0", path = "../plugin-runtime", registry = "dzwei-registry" }
serde_json = "1.0.149"
