[package]
name = "plugin-manifest"
version = "0.2.0"
edition = "2024"
description = "Plugin manifest and contract types for shared host/plugin metadata."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
plugin-capabilities = { version = "0.2.0", path = "../plugin-capabilities", registry = "dzwei-registry" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
plugin-test-kit = { version = "0.2.0", path = "../plugin-test-kit", registry = "dzwei-registry" }
serde_json = "1.0.149"
