[package]
name = "plugin-manifest"
version = "0.2.1"
edition = "2024"
description = "Plugin manifest and contract types for shared host/plugin metadata."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
plugin-capabilities = { version = "0.2.1", path = "../plugin-capabilities", registry = "dzwei-registry" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
# Keep test-kit local-only for tests; avoid publish-time registry dependency cycle.
plugin-test-kit = { path = "../plugin-test-kit" }
serde_json = "1.0.149"
