[package]
name = "plugin-protocol"
description = "Request/response protocol types for the Rust Plugin System — invocation context, execution metadata, and capability negotiation."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "protocol", "plugin-system", "ffi"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
plugin-capabilities = { version = "0.1.0", path = "../plugin-capabilities" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
plugin-test-kit = { version = "0.1.0", path = "../plugin-test-kit" }
