[package]
name = "plugin-protocol"
version = "0.1.0"
edition = "2024"
description = "JSON request and response protocol for plugin invocations."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
plugin-capabilities = { version = "0.1.0", path = "../plugin-capabilities" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
plugin-test-kit = { version = "0.1.0", path = "../plugin-test-kit" }
