[package]
name = "plugin-runtime"
description = "Plugin runtime utilities for the Rust Plugin System — PluginSummary and response-rendering helpers shared by host applications."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "runtime", "plugin-system", "ffi"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }

[dev-dependencies]
plugin-test-kit = { version = "0.1.0", path = "../plugin-test-kit" }
