[package]
name = "plugin-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime rendering and shared summaries for plugin host output."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest", registry = "dzwei-registry" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol", registry = "dzwei-registry" }

[dev-dependencies]
plugin-test-kit = { version = "0.1.0", path = "../plugin-test-kit", registry = "dzwei-registry" }
