[package]
name = "plugin-runtime"
version = "0.2.1"
edition = "2024"
description = "Runtime rendering and shared summaries for plugin host output."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
plugin-manifest = { version = "0.2.1", path = "../plugin-manifest", registry = "dzwei-registry" }
plugin-protocol = { version = "0.2.1", path = "../plugin-protocol", registry = "dzwei-registry" }

[dev-dependencies]
# Keep test-kit local-only for tests; avoid publish-time registry dependency cycle.
plugin-test-kit = { path = "../plugin-test-kit" }
