[package]
name = "plugin-test-kit"
description = "Testing utilities for the Rust Plugin System — fluent builders for plugin manifests and actions, for use in unit and integration tests."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "testing", "plugin-system", "test-helpers"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
plugin-capabilities = { version = "0.1.0", path = "../plugin-capabilities" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
abi_stable = "0.11.3"
abi-stable-greeter = { version = "0.1.0", path = "../../plugins/abi-stable-greeter" }
hello-world = { version = "0.1.0", path = "../../plugins/hello-world" }
plugin-api = { version = "0.1.0", path = "../plugin-api" }
plugin-sdk = { version = "0.1.0", path = "../plugin-sdk" }
plugin-wasm = { version = "0.1.0", path = "../plugin-wasm" }
