[package]
name = "plugin-test-kit"
version = "0.1.0"
edition = "2024"
description = "Deterministic builders and fixtures for plugin and host tests."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
plugin-capabilities = { version = "0.1.0", path = "../plugin-capabilities" }
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
