[package]
name = "plugin-test-kit"
version = "0.2.1"
edition = "2024"
description = "Deterministic builders and fixtures for plugin and host tests."
publish = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
plugin-capabilities = { version = "0.2.1", path = "../plugin-capabilities", registry = "dzwei-registry" }
plugin-manifest = { version = "0.2.1", path = "../plugin-manifest", registry = "dzwei-registry" }
plugin-protocol = { version = "0.2.1", path = "../plugin-protocol", registry = "dzwei-registry" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
