[package]
name = "plugin-wasm"
description = "WebAssembly plugin sandbox for the Rust Plugin System — loads and executes WASM plugins via Wasmtime with full memory isolation."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["plugin", "wasm", "wasmtime", "plugin-system"]
categories = ["development-tools", "wasm"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
plugin-manifest = { version = "0.1.0", path = "../plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../plugin-protocol" }
serde_json = "1.0.149"
wat = "1.245.0"
wasmtime = "43.0.0"
