[package]
name = "example-abi-evolution"
publish = false
version = "0.2.1"
edition = "2024"

[[bin]]
name = "abi-evolution"
path = "src/main.rs"

[dependencies]
abi_stable = "0.11"
serde_json = "1"
anyhow = "1"
plugin-manifest = { path = "../../crates/plugin-manifest" }
plugin-protocol = { path = "../../crates/plugin-protocol" }
