[package]
name = "host-cli"
publish = false
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
host-core = { version = "0.2.0", path = "../../crates/host-core" }
plugin-abi = { version = "0.2.0", path = "../../crates/plugin-abi" }
plugin-manifest = { version = "0.2.0", path = "../../crates/plugin-manifest" }
plugin-protocol = { version = "0.2.0", path = "../../crates/plugin-protocol" }
plugin-wasm = { version = "0.2.0", path = "../../crates/plugin-wasm" }
serde_json = "1.0.149"
