[package]
name = "host-dioxus-desktop"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "host-dioxus-desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
dioxus = { version = "0.7.4", features = ["desktop"] }
dioxus-desktop = "0.7.4"
host-core = { version = "0.1.0", path = "../../crates/host-core" }
plugin-manifest = { version = "0.1.0", path = "../../crates/plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../../crates/plugin-protocol" }
