[package]
name = "host-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = "0.34.1"
host-core = { version = "0.1.0", path = "../../crates/host-core" }
plugin-manifest = { version = "0.1.0", path = "../../crates/plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../../crates/plugin-protocol" }
