[package]
name = "host-iced"
publish = false
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
host-core = { version = "0.2.1", path = "../../crates/host-core" }
iced = "0.14.0"
plugin-manifest = { version = "0.2.1", path = "../../crates/plugin-manifest" }
plugin-protocol = { version = "0.2.1", path = "../../crates/plugin-protocol" }
