[package]
name = "host-web"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
host-core = { version = "0.1.0", path = "../../crates/host-core" }
plugin-manifest = { version = "0.1.0", path = "../../crates/plugin-manifest" }
plugin-protocol = { version = "0.1.0", path = "../../crates/plugin-protocol" }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
