[package]
name = "abi-stable-greeter"
publish = false
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = "0.11.3"
plugin-abi = { version = "0.2.0", path = "../../crates/plugin-abi" }
plugin-manifest = { version = "0.2.0", path = "../../crates/plugin-manifest" }
plugin-protocol = { version = "0.2.0", path = "../../crates/plugin-protocol" }
serde_json = "1.0.149"
