[package]
name = "service-hooks"
publish = false
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugin-sdk = { version = "0.2.1", path = "../../crates/plugin-sdk" }
plugin-capabilities = { version = "0.2.1", path = "../../crates/plugin-capabilities" }
serde_json = "1.0.149"
